[project]
name = "openscad-cutter-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "Dane Summers",email = "dsummersl@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
